[gd_scene load_steps=4 format=3 uid="uid://mobiletestscene123"]

[ext_resource type="Script" path="res://scripts/screens/MobileTestScene.gd" id="1_mobile_test"]
[ext_resource type="PackedScene" path="res://scenes/components/CardUI.tscn" id="2_card_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.25, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MobileTestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_mobile_test")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1.0)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "üì± Mobile Optimization Test"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0, 1, 1, 1)
horizontal_alignment = 1

[node name="TestResultsLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Starting tests..."
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 1, 1, 1)
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TouchTestButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(240, 60)
text = "üß™ TEST TOUCH RESPONSE"
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="DragTestArea" type="Panel" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/DragTestArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
text = "Drag Test Area"
horizontal_alignment = 1

[node name="CardTestContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/CardTestContainer"]
layout_mode = 2
text = "üÉè Card Touch Test:"
theme_override_colors/font_color = Color(0, 1, 1, 1)

[node name="CardContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/CardTestContainer"]
layout_mode = 2
alignment = 1

[node name="TestCard" parent="ScrollContainer/VBoxContainer/CardTestContainer/CardContainer" instance=ExtResource("2_card_ui")]
layout_mode = 2

[node name="BackButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(240, 56)
text = "‚Üê BACK TO MENU"
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[connection signal="pressed" from="ScrollContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]